--- a/myapplication/templates/inc/layouts.html
+++ b/myapplication/templates/inc/layouts.html
@@ -13,15 +13,15 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sidebars/">
    
 
-    <link href="{% static 'assets/dist/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'assets/dist/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"> </script>
  
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet" />
-    <link href="{% static 'css/sidebars.css' %}" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/sidebars.css' %}" rel="stylesheet" type="text/css">
 
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="{% static 'apple-touch-icon.png' %}" sizes="180x180">
