--- a/static_in_proj/our_static/css/sidebars.css
+++ b/static_in_proj/our_static/css/sidebars.css
@@ -1,3 +1,10 @@
+/*!
+ * Datepicker for Bootstrap v1.5.0 (https://github.com/eternicode/bootstrap-datepicker)
+ *
+ * Copyright 2012 Stefan Petre
+ * Improvements by Andrew Rowls
+ * Licensed under the Apache License v2.0 (http://www.apache.org/licenses/LICENSE-2.0)
+ */
 body {
     min-height: 100vh;
     min-height: -webkit-fill-available;
