--- a/myapplication/templates/homepage.html
+++ b/myapplication/templates/homepage.html
@@ -1,28 +1,57 @@
-{% extends 'inc/layouts.html' %}
+
+{% extends 'inc/layouts1.html' %}
+{% load crispy_forms_tags %}
 
 
-{% block content %}
-<section class="py-4">
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <form method="POST" action="">
-                    <div class="mb-4">
-                        <label for="" class="form-label">Enter User Name</label>
-                        <input type="text" name="username" id="username" class="form-control" placeholder="Enter Username">  
+
+       <!--CONTENTS-->
+       {% block content %}
+       {% include 'inc/message.html' %}
+       <style>
+        .asteriskField {
+    display: none;
+}   
+
+.fc-event
+{
+    line-height: 6;
+}
+       </style>
+            <input type="hidden" id="hiddenValue" value="{{ leave_dt }}">
+            <div class="container mt-4" style="max-width: 1850px;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <form method = "POST"> 
+                            {% csrf_token %}
+                            
+                            {% crispy leaveform %}
+                            <!-- {{ leaveform|crispy }} -->
+                            
+
+                        <button type="submit" class="btn btn-primary">Login</button>
+                        </form>
                     </div>
-                    <div class="mb-4">
-                        <label for="" class="form-label">Enter Password</label>
-                        <input type="text" name="password" id="password" class="form-control" placeholder="Enter Password">  
+                    <div class="col">
+                        <!-- Right side: Details -->
+                        <div>
+                            <!-- Add your details content here -->
+                            <!-- <h2>Leave Details</h2>
+                            
+                            <table class="table table-striped">
+                                {% for item in data %}
+                                <tr>
+                                    <td>{{ item.flidarid }}</td>
+                                    <td>{{ item.flidarname }}</td>
+                                    <td>{{ item.installationdate }}</td>
+                                </tr>
+                                {% endfor %}
+                            </table> -->
+                            <input type="hidden" id="hiddenJson" value="{{ events }}">
+                            <div id="calendar"></div>
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                    {% include 'inc/message.html' %}
-                </form>
+                </div>
             </div>
-        </div>
-    </div>
-
-</section>
 
 
 {% endblock %}
