--- a/myapplication/templates/inc/message.html
+++ b/myapplication/templates/inc/message.html
@@ -1,8 +1,8 @@
 {% for msg in messages %}
-<div class="alert alert-info alert-dismissable fade show" role="alter">
-    {{msg}}
-    <button type="button" class="'btn-class" data-bs-dismiss="'alert" aria-label="close"></button>
-</div>
 
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong>{{msg}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
 
 {% endfor %}
